<resources>
    <string name="app_name">DiakabanaAndroidLabs</string>
    <string name="button_message">I\'m a button</string>
    <string name="hello_message">Hello world!</string>
    <string name="editmessage" translatable="false">I\'m an EditText</string>
    <string name="hinttext">Write something here</string>
    <string name="compoundtext" translatable="false">Do you drink coffee?</string>
</resources>